# master/clinvio-doctor-portal-service/src/main/java/com/doctor/portal/controllers/RegistrationController.java
@@ -3,16 +3,26 @@ package com.doctor.portal.controllers;
 import static com.doctor.portal.utils.AppConst.DOCTOR_PORTAL_URL;
 import static com.doctor.portal.utils.AppConst.REGISTERATION_URL;
 
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+
+import com.doctor.portal.business.RegisterationBusiness;
+import com.doctor.portal.model.DoctorProfileRequestModel;
+import com.doctor.portal.model.DoctorProfileResponseModel;
 
 @RestController
 @RequestMapping(DOCTOR_PORTAL_URL)
 public class RegistrationController {
 
+	@Autowired
+	private RegisterationBusiness business;
+	
 	@GetMapping(REGISTERATION_URL)
-	public String register() {
-		return "test";
+	public ResponseEntity<DoctorProfileResponseModel> register(DoctorProfileRequestModel request) {		
+		return new ResponseEntity<>(business.register(request), HttpStatus.OK);
 	}
 }
