# master/clinvio-doctor-portal-service/src/main/resources/api.yaml
@@ -17,12 +17,28 @@ paths:
       responses:
         '200':
           description: Item created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DoctorProfileResponseModel'
         '400':
           description: Invalid input, object invalid, Bad Request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseError'
         '409':
           description: An existing profile already exists.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseError'
         '417':
           description: Expectation given in the request's Expect header could not be met.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseError'
       requestBody:
         content:
           application/json:
@@ -80,3 +96,27 @@ components:
           contactNumber:
             type: string
             example: '+36142517676'
+    DoctorProfileResponseModel:
+      type: object
+      properties:
+        successCode:
+          type: integer
+        successMessage:
+          type: string
+        detailedMessage:
+          type: string
+        createdAt:
+          type: string
+    ResponseError:
+      type: object
+      properties:
+        errorCode:
+          type: integer
+        errorMessage:
+          type: string
+        detailedMessage:
+          type: string
+        exceptionName:
+          type: string
+        createdAt:
+          type: string
